# Test-bot

./: .env-example  README.md  docker-compose.yml  nginx.conf
api/: Dockerfile  pyproject.toml
api/src/: app.py
api/src/cases/: __init__.py  calculating.py
api/src/facades/: __init__.py  mq_gateway.py
api/src/periphery/: brokers.py  envs.py
api/src/presentation/: app.py
telegrambot/: .env-example  Dockerfile  alembic.ini
telegrambot/src/: envs.py  main.py
telegrambot/src/cases/: calculating.py  users.py
telegrambot/src/facades/: __init__.py  db_gateway.py
telegrambot/src/infrastructure/: __init__.py  calculator_gateway.py
telegrambot/src/periphery/: bots.py  envs.py
telegrambot/src/periphery/db/: engines.py  tables.py
telegrambot/src/periphery/db/migrations/versions/: ce1577180486_add_user_table.py
telegrambot/src/presentation/: app.py
telegrambot/src/services/: __init__.py  calculating.py
