[tool.poetry]
name = "test-bot"
version = "0.1.0"
description = ""
authors = ["emptybutton <88573504+emptybutton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
typenv = "^0.2.0"
fastapi = "^0.111.0"
aiohttp = "^3.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
